// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test render CollapsableSelect collapsable select flow  1`] = `
<div>
  <form>
    <div
      class="bp3-form-group"
    >
      <div
        class="bp3-form-content"
      >
        <div
          class="horizontal layout-spacing-medium StyledProps--main"
        >
          <div
            class="bp3-card bp3-interactive bp3-elevation-0 card selected interactive"
            data-index="0"
            tabindex="0"
          >
            <span
              class="corner"
            >
              <span
                class="badge"
              />
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                data-icon="main-tick"
              >
                <svg
                  height="10"
                  viewBox="0 0 11 8"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <div
              class="vertical layout-spacing-undefined StyledProps--main"
            >
              Github
            </div>
          </div>
          <button
            class="bp3-button bp3-minimal button StyledProps--font StyledProps--main closeChangeBtn StyledProps--intent-primary without-shadow withLeftIcon"
            data-testid="collapsable-select-change"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
              data-icon="Edit"
            >
              <svg
                height="12"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  opacity="0.3"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              Change
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Test render CollapsableSelect should render card view with defaultValue 1`] = `
<div>
  <form>
    <div
      class="bp3-form-group"
    >
      <div
        class="bp3-form-content"
      >
        <div
          class="horizontal layout-spacing-medium StyledProps--main"
        >
          <div
            class="bp3-card bp3-interactive bp3-elevation-0 card selected interactive"
            data-index="0"
            tabindex="0"
          >
            <span
              class="corner"
            >
              <span
                class="badge"
              />
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                data-icon="main-tick"
              >
                <svg
                  height="10"
                  viewBox="0 0 11 8"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <div
              class="vertical layout-spacing-undefined StyledProps--main"
            >
              Kubernetes
            </div>
          </div>
          <button
            class="bp3-button bp3-minimal button StyledProps--font StyledProps--main closeChangeBtn StyledProps--intent-primary without-shadow withLeftIcon"
            data-testid="collapsable-select-change"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
              data-icon="Edit"
            >
              <svg
                height="12"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  opacity="0.3"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              Change
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Test render CollapsableSelect should render card view with no defaultValue 1`] = `
<div>
  <form>
    <div
      class="bp3-form-group"
    >
      <div
        class="bp3-form-content"
      >
        <div
          class="horizontal layout-spacing-medium StyledProps--main"
        >
          <div
            class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
            data-index="0"
            tabindex="0"
          >
            <div
              class="vertical layout-spacing-undefined StyledProps--main"
            >
              Kubernetes
            </div>
          </div>
          <div
            class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
            data-index="1"
            tabindex="0"
          >
            <div
              class="vertical layout-spacing-undefined StyledProps--main"
            >
              Github
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Test render CollapsableSelect should render customView  1`] = `
<div>
  <form>
    <div
      class="bp3-form-group"
    >
      <div
        class="bp3-form-content"
      >
        <div
          class="horizontal layout-spacing-medium StyledProps--main"
        >
          <div
            data-index="0"
          >
            <div
              class="vertical layout-spacing-undefined StyledProps--main"
            >
              Kubernetes
            </div>
          </div>
          <button
            class="bp3-button bp3-minimal button StyledProps--font StyledProps--main closeChangeBtn StyledProps--intent-primary without-shadow withLeftIcon"
            data-testid="collapsable-select-change"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
              data-icon="Edit"
            >
              <svg
                height="12"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  opacity="0.3"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              Change
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;
